[gd_scene load_steps=10 format=3 uid="uid://bpxgt3rbb7fwy"]

[ext_resource type="Script" path="res://characters/3_character_player/hud/hud.gd" id="1_jv0iq"]
[ext_resource type="Theme" uid="uid://ce6cpfne6646l" path="res://fonts/body_theme.tres" id="2_abagx"]
[ext_resource type="LabelSettings" uid="uid://dwvvsn6nrpaak" path="res://characters/3_character_player/hud/context_label_settings.tres" id="3_3gore"]
[ext_resource type="Script" path="res://characters/3_character_player/hud/interact_context.gd" id="4_b6rb5"]
[ext_resource type="Script" path="res://characters/3_character_player/hud/sever_context.gd" id="5_2jktu"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1diql"]
resource_local_to_scene = true
load_path = "res://.godot/imported/reticule.png-dede4b0f0dc2de985978a85e9cd7a9ec.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ccw5d"]
resource_local_to_scene = true
load_path = "res://.godot/imported/stamina_vignette.png-21104bbd41dc8d7c3309f3100586a5e7.ctex"

[sub_resource type="Curve" id="Curve_cnevg"]

[sub_resource type="CurveTexture" id="CurveTexture_gbonj"]
curve = SubResource("Curve_cnevg")

[node name="HUD" type="CanvasLayer"]
visible = false
script = ExtResource("1_jv0iq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_abagx")

[node name="ImportantNotice" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.0
offset_top = 22.0
offset_right = 236.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
autowrap_mode = 2

[node name="ClearTimer" type="Timer" parent="Control/ImportantNotice"]
wait_time = 5.0
one_shot = true

[node name="Reticule" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 38.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
texture = SubResource("CompressedTexture2D_1diql")

[node name="StaminaVignette" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_ccw5d")

[node name="UnstuckVignette" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CurveTexture_gbonj")

[node name="TextChatEntry" type="LineEdit" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5313
offset_top = -52.0
offset_right = 33.5313
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter to send"
alignment = 1
max_length = 64
expand_to_text_length = true

[node name="ContextIndicators" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = 6.0
offset_right = 29.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractContext" type="Label" parent="Control/ContextIndicators"]
visible = false
layout_mode = 2
label_settings = ExtResource("3_3gore")
horizontal_alignment = 1
script = ExtResource("4_b6rb5")

[node name="SeverContext" type="Label" parent="Control/ContextIndicators"]
visible = false
layout_mode = 2
label_settings = ExtResource("3_3gore")
horizontal_alignment = 1
script = ExtResource("5_2jktu")

[connection signal="timeout" from="Control/ImportantNotice/ClearTimer" to="." method="_on_clear_timer_timeout"]
